# gRPC-setup-series

./: .gitignore  README.md
dotnet/Greeter/: Greeter.sln  README.md
dotnet/Greeter/Client/: Client.fsproj  Program.fs
dotnet/Greeter/Protocol/: Protocol.csproj
dotnet/Greeter/Server/: Program.fs  Server.fsproj
rust/: README.md
rust/bookstore-with-tonic/: Cargo.toml  README.md  build.rs
rust/bookstore-with-tonic/proto/: bookstore.proto
rust/bookstore-with-tonic/src/: bookstore.rs  client.rs  proto_bookstore.rs  server.rs
rust/calculator/: Cargo.toml  README.md  build.rs
rust/calculator/proto/: calculator.proto
rust/calculator/src/: client.rs  server.rs
rust/greet-with-tonic/: Cargo.toml  README.md  build.rs
rust/greet-with-tonic/proto/: greeter.proto
rust/greet-with-tonic/src/: client.rs  hello_world.rs  server.rs
rust/user/: Cargo.toml  README.md  build.rs
rust/user/proto/: user.proto
rust/user/src/: client.rs  db_connection.rs  main.rs  server.rs  service.rs
