[package]
  edition = "2021"
  name    = "calculator"
  version = "0.1.0"

[dependencies]
  prost            = "0.13.4"
  tokio            = {version = "1.43.0", features = ["full"]}
  tonic            = "0.12.3"
  tonic-reflection = "0.12.3"
  tonic-web        = "0.12.3"
  tower-http       = {version = "0.6.2", features = ["cors"]}

[build-dependencies]
  tonic-build = "0.12.3"

[[bin]]
  name = "server"
  path = "src/server.rs"

[[bin]]
  name = "client"
  path = "src/client.rs"
