[package]
name = "greet-with-tonic"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the Hello gRPC server
name = "server"
path = "src/server.rs"

[[bin]] # Bin to run the Hello gRPC client
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8"