[package]
  edition = "2021"
  name    = "greet-with-tonic"
  version = "0.1.0"

[[bin]] # Bin to run the Hello gRPC server
  name = "server"
  path = "src/server.rs"

[[bin]] # Bin to run the Hello gRPC client
  name = "client"
  path = "src/client.rs"

[dependencies]
  prost      = "0.13"
  reqwest    = "0.12.12"
  serde      = {version = "1.0.217", features = ["derive"]}
  serde_json = "1.0.138"
  tokio      = {version = "1.43", features = ["macros", "rt-multi-thread"]}
  tonic      = "0.12"
  warp       = "0.3.7"

[build-dependencies]
  tonic-build = "0.12"
