[package]
  edition = "2021"
  name    = "user"
  version = "0.1.0"

[dependencies]
  async-stream    = "0.3.3"
  bytes           = "1.2"
  console         = "0.15"
  futures-preview = "0.2.2"
  http            = "0.2.8"
  prost           = "0.11"
  prost-derive    = "0.11"
  prost-types     = "0.11"
  serde           = "1"
  serde_derive    = "1"
  serde_json      = "1"
  tokio           = "1.20"
  tonic           = "0.8"
  tower           = "0.4"

  chrono   = "0.4.22"
  dotenv   = "0.15.0"
  postgres = "0.19.4"
  uuid     = {version = "1.1.2", features = ["serde", "v4"]}

[build-dependencies]
  tonic-build = "0.8"
