[package]
  edition = "2021"
  name    = "user"
  version = "0.1.0"

[dependencies]
  async-stream    = "0.3.6"
  bytes           = "1.9"
  chrono          = "0.4.39"
  console         = "0.15"
  dotenv          = "0.15.0"
  futures-preview = "0.2.2"
  http            = "1.2.0"
  postgres        = "0.19.9"
  prost           = "0.13"
  serde           = {version = "1", features = ["derive"]}
  serde_json      = "1"
  tokio           = {version = "1.43", features = ["full"]}
  tonic           = "0.12"
  tower           = "0.5"
  uuid            = {version = "1.12.1", features = ["serde", "v4"]}

[build-dependencies]
  tonic-build = "0.12"
